resources/examples/ingress-class.yml
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  labels:
    app.kubernetes.io/component: controller
  name: ingress-j8a
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  controller: github.com/simonmittag/ingress-j8a
