resources/examples/ingress-defaultbackend-norules.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-defaultbackend-norules
  namespace: default
spec:
  ingressClassName: ingress-j8a
  defaultBackend:
    service:
      name: s1
      port:
        number: 80
