resources/examples/ingress-defaultbackend-rules.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-defaultbackend-rules
  namespace: default
spec:
  ingressClassName: ingress-j8a
  rules:
    - host: foo.bar.com
      http:
        paths:
          - path: /foo
            pathType: Prefix
            backend:
              service:
                name: s1
                port:
                  number: 80
  defaultBackend:
    service:
      name: s1
      port:
        number: 80
