resources/examples/ingress-prefixpath.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-prefixpath
  namespace: default
spec:
  ingressClassName: ingress-j8a
  rules:
    - http:
        paths:
          - path: /foo
            pathType: Prefix
            backend:
              service:
                name: s1
                port:
                  name: http
