resources/examples/ingress-testing.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-testing
  namespace: default
spec:
  ingressClassName: ingress-j8a
  rules:
    - host: foo.bar.com
      http:
        paths:
          - path: /foo
            pathType: Prefix
            backend:
              service:
                name: s1
                port:
                  number: 80
